# PROJECTS

./: main.py  pyproject.toml
Uml Diagrams/: ClassDiagram.drawio  UseCaseDiagram.drawio
mfd/: __init__.py  dispenser.py  fuel.py  fuel_attendant.py  transaction.py
tests/: __init__.py  test_dispenser.py  test_fuel.py  test_fuel_attendant.py  test_transaction.py
toDoList/: index.html  style.css  todo.js
